@startuml
enum "StatutAcceptation" {
  Autorisé
  En Attente
  Refusé
}

enum "StatutUtilisateur" {
  Candidat
  Recruteur
  Administrateur
}

class "Utilisateur" {
  +ID_Email: varchar [PK]
  Nom: varchar
  Prénom: varchar
  MotDePasse: varchar
  Téléphone: varchar
  DateCréation: datetime
  Statut: varchar

  DateNaissance: datetime
  Adresse: varchar
  CodePostal: varchar
  Ville: varchar
  Pays: varchar
}

class "DemandeAdministrateur" { 
    ID_Demandeur: varchar [PK/FK]
    Statut: StatutAcceptation
    DateDemande: datetime
}

class "Organisation" {
  +SIREN: varchar [PK]
  #ID_Demandeur: varchar [FK]
  Nom: varchar
  Type: varchar
  Adresse: varchar
  Statut: Statut
}

class "OffreEmploi" {
  +ID_Offre: int [PK]
  #ID_Recruteur: varchar [FK]
  #ID_FichePoste: int [FK]
  NuméroUnique: varchar
  État: varchar
  DateValidité: datetime
  ListePièces: varchar
  NombrePièces: int
}

class "FichePoste" {
  +ID_FichePoste: int [PK]
  #ID_Créateur: varchar [FK]
  Intitulé: varchar
  StatutPoste: varchar
  ResponsableHiérarchique: varchar
  TypeMétier: varchar
  LieuMission: varchar
  Rythme: varchar
  Salaire: varchar
  Description: varchar
}

class "Candidature" {
  +ID_Candidature: int [PK]
  #ID_Offre: int [FK]
  #ID_Utilisateur: int [FK]
  DateCandidature: datetime
  DossierCandidature: varchar
  LettreMotivation: varchar
  CV: varchar
}

Candidature "*"--"1" OffreEmploi : "concerne" >
Utilisateur "*"--"1" Organisation : "travaille pour" >
Utilisateur "1"--"*" OffreEmploi : "publie" >
Utilisateur "1"--"*" Candidature : "postule" >
FichePoste "*"--"1" Organisation : "appartient à" >
Utilisateur "1"--"*" FichePoste : "rédige" >
Utilisateur "1"--"*" Organisation : "soumet" >
OffreEmploi "*"--"1" FichePoste : "concerne" >
DemandeAdministrateur "*"--"1" Utilisateur : "Soumet" <
@enduml